Created a class that uses @Scheduled events to update the .log file in the AWS cloud storage. This is yet to be implemented correctly.