@@ -2,12 +2,17 @@ package com.burdettracker.budgedtrackerproject;
 
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
+import software.amazon.awssdk.core.sync.ResponseTransformer;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.GetObjectRequest;
 import software.amazon.awssdk.services.s3.model.S3Exception;
 
+import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 
 @Component
 public class AWSTest implements CommandLineRunner {
@@ -31,9 +36,18 @@ public class AWSTest implements CommandLineRunner {
                     .key(key)
                     .build();
 
-            Path localFilePath = Path.of("C:\\Users\\skull\\Downloads\\myApp.log");
+            Path localFilePath = Paths.get("C:\\Users\\skull\\Downloads\\myApp.log");
 
-            s3.getObject(getObjectRequest, localFilePath);
+            // Delete the file if it exists
+            try {
+                Files.deleteIfExists(localFilePath);
+            } catch (IOException e) {
+                System.err.println("Unable to delete file: " + e.getMessage());
+                return;
+            }
+
+            // Download the file
+            s3.getObject(getObjectRequest, ResponseTransformer.toFile(localFilePath));
 
             System.out.println("File downloaded successfully");
         } catch (S3Exception e) {
